--- a/index.html
+++ b/index.html
@@ -1,85 +1,399 @@
-<!-- Contenedor general -->
-<div class="fb-header-wrap">
-  <!-- Banner y foto -->
-  <div class="fb-banner-wrap">
-    <div class="fb-banner"></div>
-    <div class="fb-profile"></div>
-  </div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RuahSoft</title>
+  <style>
+    :root {
+      --bg-main: #1a2026;
+      --bg-bar: #222831;
+      --accent: #60a5fa;
+      --text-color: #dce7ea;
+    }
 
-  <!-- Sección con texto y botón -->
-  <div class="fb-white-section">
-    <div class="fb-info">
-      <div class="fb-left">
-        <div class="fb-text">
-          <h2 class="fb-name">RuahSoft</h2>
-          <p class="fb-subtitle">Software que inspira</p>
+    body {
+      background-color: var(--bg-main);
+      font-family: Arial, sans-serif;
+      color: var(--text-color);
+      margin: 0;
+      padding: 0;
+      padding-bottom: 60px; /* espacio para la barra fija */
+    }
+
+    /* Contenedor principal centrado */
+    .page-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 16px;
+      box-sizing: border-box;
+    }
+
+    /* Contenedor general */
+    .fb-header-wrap {
+      margin: 0 auto;
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    /* Banner */
+    .fb-banner-wrap {
+      position: relative;
+    }
+
+    .fb-banner {
+      width: 100%;
+      height: 220px;
+      background-image: url('https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/banner%20extra%20grande.jpg');
+      background-size: cover;
+      background-position: center;
+    }
+
+    /* Foto de perfil */
+    .fb-profile {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-image: url('https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/logo%20ruahsoft%20512x512.jpg');
+      background-size: cover;
+      background-position: center;
+      border: 4px solid var(--bg-main);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      position: absolute;
+      bottom: -50px;
+      left: 20px;
+    }
+
+    /* Sección con texto */
+    .fb-white-section {
+      background: var(--bg-main);
+      padding: 60px 20px 20px 20px;
+    }
+
+    .fb-info {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .fb-left {
+      display: flex;
+      flex-direction: column;
+      margin-left: 20px;
+    }
+
+    .fb-name {
+      margin: 0;
+      font-size: 1rem;
+      font-weight: 800;
+    }
+
+    .fb-subtitle {
+      margin: 2px 0 0;
+      font-size: 0.85rem;
+    }
+
+    /* Botón Donar */
+    .donar-btn {
+      background-color: var(--accent);
+      color: white;
+      font-size: 0.9rem;
+      font-weight: bold;
+      padding: 8px 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color .2s ease, transform .2s ease;
+    }
+    .donar-btn:hover {
+      background-color: #80b8ff;
+      transform: scale(1.05);
+    }
+
+    /* Menú pestañas */
+    .fb-tabs {
+      display: flex;
+      gap: 20px;
+      padding: 10px 20px;
+      background: var(--bg-main);
+      border-top: 1px solid #444;
+      max-width: 100%;
+    }
+    .fb-tab {
+      background: none;
+      border: none;
+      font-size: 0.9rem;
+      font-weight: bold;
+      color: var(--text-color);
+      cursor: pointer;
+      padding: 8px 0;
+      border-bottom: 2px solid transparent;
+      transition: all 0.2s ease;
+    }
+    .fb-tab:hover {
+      color: white;
+    }
+    .fb-tab.active {
+      color: var(--accent);
+      border-bottom: 2px solid var(--accent);
+    }
+
+    /* Contenido de pestañas */
+    .tab-content {
+      max-width: 100%;
+      padding: 20px 0;
+    }
+    .tab-panel {
+      display: none;
+    }
+    .tab-panel.active {
+      display: block;
+    }
+
+    /* Cards */
+    .rs-wrap {
+      display: flex;
+      justify-content: center;
+      padding: 12px;
+      box-sizing: border-box;
+    }
+    .rs-card {
+      background: #2b3a44;
+      border-radius: 18px;
+      padding: 16px 18px;
+      box-sizing: border-box;
+      max-width: 820px;
+      width: 100%;
+    }
+    .rs-title {
+      margin: 0 0 8px 0;
+      font-size: 1rem;
+      font-weight: 800;
+      color: var(--text-color);
+    }
+    .rs-title span {
+      font-weight: 800;
+    }
+    .rs-text {
+      margin: 0;
+      color: var(--text-color);
+      font-size: .9rem;
+      line-height: 1.5;
+      text-align: justify;
+    }
+
+    /* Galería */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 10px;
+    }
+    .gallery-item {
+      width: 100%;
+      padding-bottom: 75%;
+      border-radius: 8px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    /* FOOTER - BARRA RRSS FIJA */
+    .social-bar {
+      background-color: #222831;
+      padding: 12px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      z-index: 100;
+    }
+    .social-bar img {
+      width: 28px;
+      height: 28px;
+      transition: transform 0.2s ease;
+    }
+    .social-bar img:hover {
+      transform: scale(1.1);
+    }
+
+    /* Responsivo */
+    @media(max-width:480px) {
+      .fb-banner {
+        height: 150px;
+      }
+      .fb-profile {
+        width: 70px;
+        height: 70px;
+        bottom: -35px;
+      }
+      .fb-name {
+        font-size: 0.9rem;
+      }
+      .fb-subtitle {
+        font-size: 0.8rem;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="page-container">
+    <!-- Contenedor general -->
+    <div class="fb-header-wrap">
+      <div class="fb-banner-wrap">
+        <div class="fb-banner"></div>
+        <div class="fb-profile"></div>
+      </div>
+      <div class="fb-white-section">
+        <div class="fb-info">
+          <div class="fb-left">
+            <div class="fb-text">
+              <h2 class="fb-name">RuahSoft</h2>
+              <p class="fb-subtitle">Software que inspira</p>
+            </div>
+          </div>
+          <div class="fb-donar">
+            <button id="donar-btn" class="donar-btn">Donar</button>
+          </div>
         </div>
       </div>
-      <!-- Botón Donar -->
-      <div class="fb-donar">
-        <button id="donar-btn" class="donar-btn">Donar</button>
-      </div>
     </div>
-  </div>
-</div>
 
-<!-- Menú de pestañas -->
-<div class="fb-tabs">
-  <button class="fb-tab active" data-tab="posts">Posts</button>
-  <button class="fb-tab" data-tab="galeria">Galería</button>
-  <button class="fb-tab" data-tab="acerca">Acerca de</button>
-  <button class="fb-tab" data-tab="contacto">Contacto</button>
-</div>
+    <!-- Menú de pestañas -->
+    <div class="fb-tabs">
+      <button class="fb-tab active" data-tab="posts">Posts</button>
+      <button class="fb-tab" data-tab="galeria">Galería</button>
+      <button class="fb-tab" data-tab="acerca">Acerca de</button>
+      <button class="fb-tab" data-tab="contacto">Contacto</button>
+    </div>
 
 <!-- Contenido de pestañas -->
 <div class="tab-content">
-  
   <!-- Posts -->
   <div id="posts" class="tab-panel active">
     <div class="rs-wrap">
       <div class="rs-card">
-        <h2 class="rs-title">Post 1</h2>
-        <p class="rs-text">Este es un ejemplo de post en RuahSoft con texto demostrativo.</p>
+        <h2 class="rs-title">DailyVerse 1.0.0</h2>
+        <p class="rs-text">
+          🌟 <strong>DailyVerse</strong> es nuestra primera app móvil, lanzada en septiembre de 2025.  
+          Esta aplicación no solo te entrega un versículo bíblico cada día, sino que también te conecta con el cielo 🙏, te inspira a meditar en las Escrituras 📖, encontrar consuelo en momentos difíciles 💛 y compartir las buenas nuevas con tus seres más queridos ✨.
+        </p>
+        <p class="rs-text" style="margin-top:12px; font-style:italic; color:#80b8ff;">
+          💫 "El Señor es mi pastor; nada me faltará." – Salmos 23:1 💫
+        </p>
       </div>
     </div>
-    <div class="rs-wrap">
-      <div class="rs-card">
-        <h2 class="rs-title">Post 2</h2>
-        <p class="rs-text">Otro ejemplo de publicación con contenido ficticio para mostrar estilo.</p>
-      </div>
+
+    <!-- Sección video + descripción en card -->
+<div class="rs-wrap">
+  <div class="video-card">
+    <!-- Columna izquierda: video -->
+    <div class="video-left">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/EVWo2VFKPu8" title="DailyVerse Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="rs-wrap">
-      <div class="rs-card">
-        <h2 class="rs-title">Post 3</h2>
-        <p class="rs-text">Más contenido de ejemplo para simular la sección de posts.</p>
-      </div>
+
+    <!-- Columna derecha: texto -->
+    <div class="video-right">
+      <h2 class="rs-title">DailyVerse 1.0.0</h2>
+      <ul class="app-features">
+        <li>📖 Versículos diarios automáticamente</li>
+        <li>✨ Diseño moderno y fácil de usar</li>
+        <li>🔔 Recordatorios diarios para reflexionar</li>
+        <li>💡 Consejos e inspiración basados en la Biblia</li>
+        <li>🌐 Compartir versículos con amigos</li>
+        <li>💬 Notas personales para cada versículo</li>
+        <li>📅 Histórico de versículos leídos</li>
+        <li>📲 Descarga la App aquí:&nbsp;<a href="https://play.google.com/" target="_blank" style="color:#60a5fa; text-decoration:none;">DailyVerse</a></li>
+      </ul>
     </div>
   </div>
-  
+</div>
+
+<style>
+/* Card similar a la de posts */
+.video-card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  background: #2b3a44;
+  border-radius: 18px;
+  padding: 16px 18px;
+  max-width: 820px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 24px;
+}
+
+.video-left, .video-right {
+  flex: 1 1 300px; /* flexible, mínimo 300px */
+  max-width: 480px;
+}
+
+.video-left iframe {
+  border-radius: 12px;
+  height: 270px;
+}
+
+.video-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.video-right h2 {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.app-features {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.app-features li {
+  margin-bottom: 8px;
+  font-size: 0.95rem;
+  line-height: 1.4;
+  display: flex;
+  align-items: center;
+}
+
+/* Responsivo */
+@media(max-width:768px){
+  .video-left, .video-right {
+    max-width: 100%;
+  }
+  .video-left iframe {
+    height: 220px;
+  }
+}
+</style>
+
+
+  </div>
   <!-- Galería -->
   <div id="galeria" class="tab-panel">
     <div class="gallery">
       <div class="gallery-item" style="background-color:#ef4444;"></div>
       <div class="gallery-item" style="background-color:#3b82f6;"></div>
       <div class="gallery-item" style="background-color:#10b981;"></div>
-      <div class="gallery-item" style="background-color:#f59e0b;"></div>
-      <div class="gallery-item" style="background-color:#8b5cf6;"></div>
-      <div class="gallery-item" style="background-color:#ec4899;"></div>
     </div>
   </div>
-  
+
   <!-- Acerca de -->
   <div id="acerca" class="tab-panel">
     <div class="rs-wrap">
       <div class="rs-card">
         <h2 class="rs-title">Acerca de <span>RuahSoft</span></h2>
-        <p class="rs-text">
-          "RuahSoft desarrolla aplicaciones móviles y software innovador para Android e iOS. Nos apasiona convertir ideas en experiencias digitales útiles y de calidad. Siempre buscamos soluciones creativas que faciliten la vida de los usuarios."
-        </p>
+        <p class="rs-text">"RuahSoft desarrolla aplicaciones móviles y software innovador para Android e iOS. Nos apasiona convertir ideas en experiencias digitales útiles y de calidad."</p>
       </div>
     </div>
   </div>
-  
+
   <!-- Contacto -->
   <div id="contacto" class="tab-panel">
     <div class="rs-wrap">
@@ -91,261 +405,37 @@
   </div>
 </div>
 
-<!-- BARRA DE RRSS AL FINAL (FOOTER) -->
+  <!-- Barra de RRSS siempre visible -->
 <div class="social-bar">
-  <a href="#" target="_blank">
-    <img src="URL_ICONO_FACEBOOK_PNG" alt="Facebook">
-  </a>
-  <a href="#" target="_blank">
-    <img src="URL_ICONO_INSTAGRAM_PNG" alt="Instagram">
-  </a>
-  <a href="#" target="_blank">
-    <img src="URL_ICONO_YOUTUBE_PNG" alt="YouTube">
-  </a>
+  <a href="https://web.facebook.com/ruahsoft" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+  <a href="https://www.instagram.com/ruahsoft" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
+   <a href="https://www.tiktok.com/@ruahsoft" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok"></a>
+  <a href="https://www.youtube.com/@RuahSoft" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
+  <a href="https://play.google.com/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/888/888857.png" alt="Play Store"></a>
 </div>
 
-<style>
-:root {
-  --bg-main: #1a2026;
-  --bg-bar: #222831;
-  --accent: #60a5fa;
-  --text-color: #dce7ea;
-}
 
-body {
-  background-color: var(--bg-main);
-  font-family: Arial, sans-serif;
-  color: var(--text-color);
-  margin: 0;
-  padding: 0;
-}
+  <script>
+    // Cambio de pestañas
+    document.querySelectorAll('.fb-tab').forEach(tab=>{
+      tab.addEventListener('click', ()=>{
+        document.querySelectorAll('.fb-tab').forEach(t=>t.classList.remove('active'));
+        document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));
+        tab.classList.add('active');
+        document.getElementById(tab.dataset.tab).classList.add('active');
+        window.scrollTo({ top: document.querySelector('.fb-tabs').offsetTop, behavior: 'smooth' });
+      });
+    });
 
-/* Contenedor principal */
-.fb-header-wrap {
-  max-width: 100%;
-  margin: 0 auto;
-  border-radius: 12px;
-  overflow: hidden;
-}
-
-/* Banner */
-.fb-banner-wrap {
-  position: relative;
-}
-
-.fb-banner {
-  width: 100%;
-  height: 220px;
-  background-image: url('https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/banner%20extra%20grande.jpg');
-  background-size: cover;
-  background-position: center;
-}
-
-/* Foto de perfil */
-.fb-profile {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-image: url('https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/logo%20ruahsoft%20512x512.jpg');
-  background-size: cover;
-  background-position: center;
-  border: 4px solid var(--bg-main);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-  position: absolute;
-  bottom: -50px;
-  left: 20px;
-}
-
-/* Sección con texto */
-.fb-white-section {
-  background: var(--bg-main);
-  padding: 60px 20px 20px 20px;
-}
-
-.fb-info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fb-left {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-}
-
-.fb-name {
-  margin: 0;
-  font-size: 1rem;
-  font-weight: 800;
-}
-
-.fb-subtitle {
-  margin: 2px 0 0;
-  font-size: 0.85rem;
-}
-
-/* Botón Donar */
-.donar-btn {
-  background-color: var(--accent);
-  color: white;
-  font-size: 0.9rem;
-  font-weight: bold;
-  padding: 8px 18px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color .2s ease, transform .2s ease;
-}
-.donar-btn:hover {
-  background-color: #80b8ff;
-  transform: scale(1.05);
-}
-
-/* Menú pestañas */
-.fb-tabs {
-  display: flex;
-  gap: 20px;
-  padding: 10px 20px;
-  background: var(--bg-main);
-  border-top: 1px solid #444;
-  max-width: 100%;
-}
-.fb-tab {
-  background: none;
-  border: none;
-  font-size: 0.9rem;
-  font-weight: bold;
-  color: var(--text-color);
-  cursor: pointer;
-  padding: 8px 0;
-  border-bottom: 2px solid transparent;
-  transition: all 0.2s ease;
-}
-.fb-tab:hover {
-  color: white;
-}
-.fb-tab.active {
-  color: var(--accent);
-  border-bottom: 2px solid var(--accent);
-}
-
-/* Contenido de pestañas */
-.tab-content {
-  max-width: 100%;
-  padding: 20px;
-}
-.tab-panel {
-  display: none;
-}
-.tab-panel.active {
-  display: block;
-}
-
-/* Cards */
-.rs-wrap {
-  display: flex;
-  justify-content: center;
-  padding: 12px;
-  box-sizing: border-box;
-}
-.rs-card {
-  background: #2b3a44;
-  border-radius: 18px;
-  padding: 16px 18px;
-  box-sizing: border-box;
-  max-width: 820px;
-  width: 100%;
-}
-.rs-title {
-  margin: 0 0 8px 0;
-  font-size: 1rem;
-  font-weight: 800;
-  color: var(--text-color);
-}
-.rs-title span {
-  font-weight: 800;
-}
-.rs-text {
-  margin: 0;
-  color: var(--text-color);
-  font-size: .9rem;
-  line-height: 1.5;
-  text-align: justify;
-}
-
-/* Galería */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  gap: 10px;
-}
-.gallery-item {
-  width: 100%;
-  padding-bottom: 75%;
-  border-radius: 8px;
-  background-size: cover;
-  background-position: center;
-}
-
-/* FOOTER - BARRA RRSS */
-.social-bar {
-  background-color: #222831;
-  padding: 12px 0;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 40px;
-}
-.social-bar img {
-  width: 28px;
-  height: 28px;
-  transition: transform 0.2s ease;
-}
-.social-bar img:hover {
-  transform: scale(1.1);
-}
-
-/* Responsivo */
-@media(max-width:480px) {
-  .fb-banner {
-    height: 150px;
-  }
-  .fb-profile {
-    width: 70px;
-    height: 70px;
-    bottom: -35px;
-  }
-  .fb-name {
-    font-size: 0.9rem;
-  }
-  .fb-subtitle {
-    font-size: 0.8rem;
-  }
-}
-</style>
-
-<script>
-// Cambio de pestañas
-document.querySelectorAll('.fb-tab').forEach(tab=>{
-  tab.addEventListener('click', ()=>{
-    document.querySelectorAll('.fb-tab').forEach(t=>t.classList.remove('active'));
-    document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));
-    tab.classList.add('active');
-    document.getElementById(tab.dataset.tab).classList.add('active');
-    window.scrollTo({ top: document.querySelector('.fb-tabs').offsetTop, behavior: 'smooth' });
-  });
-});
-
-// Botón Donar -> pestaña "Acerca de" + scroll suave
-document.getElementById('donar-btn').addEventListener('click', ()=>{
-  document.querySelectorAll('.fb-tab').forEach(t=>t.classList.remove('active'));
-  document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));
-  
-  const acercaTab = document.querySelector('.fb-tab[data-tab="acerca"]');
-  acercaTab.classList.add('active');
-  document.getElementById('acerca').classList.add('active');
-  
-  window.scrollTo({ top: document.querySelector('.fb-tabs').offsetTop, behavior: 'smooth' });
-});
-</script>
+    // Botón Donar -> pestaña "Acerca de"
+    document.getElementById('donar-btn').addEventListener('click', ()=>{
+      document.querySelectorAll('.fb-tab').forEach(t=>t.classList.remove('active'));
+      document.querySelectorAll('.tab-panel').forEach(p=>p.classList.remove('active'));
+      const acercaTab = document.querySelector('.fb-tab[data-tab="acerca"]');
+      acercaTab.classList.add('active');
+      document.getElementById('acerca').classList.add('active');
+      window.scrollTo({ top: document.querySelector('.fb-tabs').offsetTop, behavior: 'smooth' });
+    });
+  </script>
+</body>
+</html>
