--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
       <div class="rs-card">
         <h2 class="rs-title">DailyVerse 1.0.0</h2>
         <p class="rs-text">
-          🌟 <strong>DailyVerse</strong> es nuestra primera app móvil, lanzada en septiembre de 2025.  
-          Esta aplicación no solo te entrega un versículo bíblico cada día, sino que también te conecta con el cielo 🙏, te inspira a meditar en las Escrituras 📖, encontrar consuelo en momentos difíciles 💛 y compartir las buenas nuevas con tus seres más queridos ✨.
+          🌟 Esta aplicación no solo te entrega un versículo bíblico cada día, sino que también te conecta con el cielo 🙏, te inspira a meditar en las Escrituras 📖, encontrar consuelo en momentos difíciles 💛 y compartir las buenas nuevas con tus seres más queridos ✨.
         </p>
         <p class="rs-text" style="margin-top:12px; font-style:italic; color:#80b8ff;">
           💫 "El Señor es mi pastor; nada me faltará." – Salmos 23:1 💫
