--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
   <div class="video-card">
     <!-- Columna izquierda: video -->
     <div class="video-left">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=PKWzhNFSJic" title="DailyVerse Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/PKWzhNFSJic" title="DailyVerse Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <!-- Columna derecha: texto -->
