--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Favicon -->
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/favicon.png">
+<!-- Opcional: para navegadores antiguos -->
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/ruahsoftware/archivos-ruahsoft/refs/heads/main/favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RuahSoft</title>
